--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <div class="bodydiv">
         <nav>
             <div class="logo">
                 <h4>BM Social</h4>
@@ -21,6 +22,7 @@
                 <div class="line3"></div>
             </div>
         </nav>
+        </div>
         <script src="javascript.js"></script>
     </body>
 </html>
