--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     </head>
 
     <body>
-        <div class="bodydiv">
         <nav>
             <div class="logo">
                 <h4>BM Social</h4>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -22,7 +21,21 @@
                 <div class="line3"></div>
             </div>
         </nav>
+        <img src="image1.png" class="home-image">
+        <div class="seperator"></div>
+        <div class="start-page">
+            <h1 class="main-headline">
+                Your Social Media Marketing Agency
+            </h1>
+            <p class="main-article">
+                BM Social ist eine marketing agentur spezialisiert auf social media marketing und management. Unser Ziel ist es euch als unternehmer euer
+                Leben leichter zu machen indem wir uns um das marketing kümmern was euch mehr zeit gibt die welt mit produkten und dinstleistungen zu verbessern.
+            </p>
         </div>
+        <div class="seperator"></div>
+        <footer>
+            <p>Licensed under GNU General Public License v2.0</p>
+        </footer>
         <script src="javascript.js"></script>
     </body>
 </html>
