--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </div>
         
         <footer>
-            <p>Licensed under GNU General Public License v2.0</p>
+            <p>© 2022 BM Social, All Rights Reserved.</p>
         </footer>
         <script src="javascript.js"></script>
     </body>
