--- a/about.html
+++ b/about.html
@@ -21,6 +21,10 @@
                 <div class="line3"></div>
             </div>
         </nav>
+        <div class="image-class">
+            <img src="image3.png" class="home-image">
+            <p class="image-text">About</p>
+        </div>
         <footer>
             <p>Licensed under GNU General Public License v2.0</p>
         </footer>
