--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,27 @@
                 <div class="line3"></div>
             </div>
         </nav>
+        <div class="image-class">
+            <img src="image2.png" class="home-image">
+            <p class="image-text">Contact</p>
+        </div>
         <div class="start-page">
             <div class="seperator"></div>
             <div class="main-headline">
-                <p>All contact Information of BM Social can be viewed here</p>
+                <p>Kontakt</p>
             </div>
             <div class="main-article">
+                <p>Kontakt Daten:</p>
                 <p>E-Mail: <a href="#">agency@bm-social.de</a></p>
                 <p>Facebook: <a href="#">BM Social</a></p>
+                
             </div>
             <div class="seperator"></div>
+            <div class="quick-summary">
+                <p>Unsere Leistungen:</p>
+                <p>social media marketing</p>
+                <p>e-mail marketing</p>
+            </div>
         </div>
         
         <footer>
