--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <div class="line3"></div>
             </div>
         </nav>
-        <img src="image1.png" class="home-image">
+        <div class="image-class">
+            <img src="image1.png" class="home-image">
+            <p class="image-text">BM Social</p>
+        </div>
         <div class="seperator"></div>
         <div class="start-page">
             <h1 class="main-headline">
